--- a/css/styles.css
+++ b/css/styles.css
@@ -271,6 +271,65 @@ margin: 0 auto;
 .social-card-item .footer-svg-link:focus{
     background-color: var(--focus-hover-footer);
 }
+
+.footer-form{
+    margin-left: 80px;
+    align-items: baseline;
+    margin-left: auto;
+}
+
+.footer-modal-text{
+
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: var(--title-secondary);
+margin-bottom: 16px;
+}
+
+.footer-form-btn{
+position: relative;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+text-align: center;
+letter-spacing: 0.04em;
+color: var(--btn-first);
+background: var(--background-btn-first);
+border-radius: 4px;
+width: 165px;
+height: 40px;
+padding: 8px 24px;
+margin-left: 24px;
+}
+
+.footer-modal-input{
+    display: inline-block;
+    padding: 8px 16px;
+    width: 264px;
+    border: 1px solid var(--btn-first);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: inherit;
+    color: var(--title-secondary);
+}
+
+.footer-modal-input::placeholder{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2.0;
+    letter-spacing: 0.04em;
+    color: var(--title-secondary);
+}
+
+.footer-form-svg{
+  position: absolute;
+    fill: var(--btn-first);
+    margin-left: 16px;
+}
 /* Index Main */
 
 /* Hero */
@@ -631,12 +690,12 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-hidden{
+/* .backdrop.is-hidden{
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
 
-}
+} */
 
 .modal{
     position: absolute;
@@ -673,6 +732,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-svg{
+    
     fill: #2E2F42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -687,4 +747,125 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .modal-btn:hover .modal-svg,
 .modal-btn:focus .modal-svg{
     fill: var(--btn-first);
+}
+
+.modal-title{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--title-first);
+    padding-top: 72px ;
+}
+
+.modal-form{
+    display: block;
+    padding: 16px 24px 24px;
+}
+
+.modal-label{
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+    margin-top: 4px;
+}
+
+.input-wrapper{
+    position: relative;
+    display: block;
+}
+
+.modal-input{
+    width: 360px;
+    min-height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    outline: none;
+    margin-bottom: 8px;
+    padding-left: 38px;
+    padding-right: 20px;
+}
+
+.modal-input-svg{
+    position: absolute;
+    left: 16px;
+    top: 8px;
+}
+
+.modal-textarea{
+    width: 360px;
+    height: 120px;
+    margin-bottom: 16px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    padding-left: 16px;
+    padding-top: 8px;
+}
+
+.modal-textarea::placeholder{
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-input-checkbox{
+    width: 16px;
+    height: 16px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 8px;
+
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+}
+
+.modal-check-label{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+    margin-bottom: 24px;
+}
+
+.modal-check-link{
+
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+    text-decoration-line: underline;
+    color: var(--logo-first);
+    margin-left: 5px;
+}
+
+.modal-check-svg{
+    fill: var(--btn-first);
+}
+
+.modal-form-btn{
+    display: block;
+    margin: 0 auto;
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+    width: 169px;
+    height: 56px;
+    background: #4D5AE5;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
 }
