--- a/css/styles.css
+++ b/css/styles.css
@@ -272,10 +272,14 @@ margin: 0 auto;
     background-color: var(--focus-hover-footer);
 }
 
-.footer-form{
-    margin-left: 80px;
+.footer-form-box{
     align-items: baseline;
     margin-left: auto;
+}
+
+.footer-form{
+    display: flex;
+    gap: 24px;
 }
 
 .footer-modal-text{
@@ -289,7 +293,10 @@ margin-bottom: 16px;
 }
 
 .footer-form-btn{
-position: relative;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
@@ -298,35 +305,32 @@ letter-spacing: 0.04em;
 color: var(--btn-first);
 background: var(--background-btn-first);
 border-radius: 4px;
-width: 165px;
+min-width: 165px;
 height: 40px;
 padding: 8px 24px;
-margin-left: 24px;
 }
 
 .footer-modal-input{
     display: inline-block;
-    padding: 8px 16px;
+    padding-left: 16px;
     width: 264px;
+    height: 40px;
     border: 1px solid var(--btn-first);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-    background-color: inherit;
+    background-color: transparent;
     color: var(--title-secondary);
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
 }
 
 .footer-modal-input::placeholder{
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 2.0;
-    letter-spacing: 0.04em;
     color: var(--title-secondary);
 }
 
 .footer-form-svg{
-  position: absolute;
+ 
     fill: var(--btn-first);
     margin-left: 16px;
 }
@@ -701,6 +705,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: absolute;
     width: 408px;
     min-height: 584px;
+    padding: 72px 24px 24px 24px;
     background: #FCFCFC;
     box-shadow: 
     0px 1px 1px rgba(0, 0, 0, 0.14), 
@@ -756,21 +761,24 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--title-first);
-    padding-top: 72px ;
+    margin-bottom: 16px;
 }
 
 .modal-form{
     display: block;
-    padding: 16px 24px 24px;
 }
 
+.modal-box{
+    margin-bottom: 8px;
+}
 .modal-label{
+    display: block;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8E8F99;
-    margin-top: 4px;
+    margin-bottom: 4px;
 }
 
 .input-wrapper{
@@ -779,20 +787,24 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input{
-    width: 360px;
-    min-height: 40px;
+    width: 100%;
+    height: 40px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     outline: none;
-    margin-bottom: 8px;
     padding-left: 38px;
     padding-right: 20px;
+    border-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input-svg{
     position: absolute;
     left: 16px;
-    top: 8px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea{
@@ -803,29 +815,35 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     line-height: 1.17;
     letter-spacing: 0.04em;
     border: 1px solid rgba(46, 47, 66, 0.4);
+    color: rgba(46, 47, 66, 0.4);
+    border-color: transparent;
+    resize: none;
     border-radius: 4px;
     padding-left: 16px;
     padding-top: 8px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea::placeholder{
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
-    color: rgba(46, 47, 66, 0.4);
 }
 
 .modal-input-checkbox{
     width: 16px;
     height: 16px;
 
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     margin-right: 8px;
 
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
+    fill: transparent;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-check-label{
@@ -863,9 +881,15 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     text-align: center;
     letter-spacing: 0.04em;
     color: #FFFFFF;
-    width: 169px;
+    min-width: 169px;
     height: 56px;
     background: #4D5AE5;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-btn:hover,
+.modal-form-btn:focus{
+    background-color: var(--focus-hover);
 }
