--- a/css/styles.css
+++ b/css/styles.css
@@ -791,12 +791,16 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     height: 40px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
-    outline: none;
     padding-left: 38px;
     padding-right: 20px;
-    border-color: transparent;
+    outline: transparent;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus{
+border-color: var(--focus-hover);
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .modal-input-svg{
@@ -807,27 +811,40 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-input:focus + .modal-input-svg{
+fill: var(--focus-hover);
+
+}
+
+.modal-textarea-box{
+margin-bottom: 16px;
+}
+
 .modal-textarea{
     width: 360px;
     height: 120px;
-    margin-bottom: 16px;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
-    border: 1px solid rgba(46, 47, 66, 0.4);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    border-color: 1px solid rgba(46, 47, 66, 0.2);
     color: rgba(46, 47, 66, 0.4);
-    border-color: transparent;
+    background-color: transparent;
+    outline: transparent;
     resize: none;
     border-radius: 4px;
-    padding-left: 16px;
-    padding-top: 8px;
+    padding: 8px 16px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-textarea::placeholder{
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
+.modal-textarea:focus{
+border-color: var(--focus-hover);
+}
+
+.modal-check-box{
+    margin-bottom: 24px;
 }
 
 .modal-input-checkbox{
@@ -854,7 +871,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8E8F99;
-    margin-bottom: 24px;
 }
 
 .modal-check-link{
@@ -870,6 +886,15 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .modal-check-svg{
     fill: var(--btn-first);
 }
+
+
+.modal-chek:checked + .modal-check-label .modal-input-checkbox {
+background-color: var(--focus-hover);
+border: none;
+fill: var(--btn-first);
+}
+
+
 
 .modal-form-btn{
     display: block;
