--- a/css/styles.css
+++ b/css/styles.css
@@ -794,12 +794,12 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding-left: 38px;
     padding-right: 20px;
     outline: transparent;
-    outline: transparent;
+    background-color: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus{
-border-color: var(--focus-hover);
+border-color: var(--btn-secondary);
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
@@ -812,7 +812,7 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .modal-input:focus + .modal-input-svg{
-fill: var(--focus-hover);
+fill: var(--btn-secondary);
 
 }
 
@@ -829,7 +829,7 @@ margin-bottom: 16px;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
-    border-color: 1px solid rgba(46, 47, 66, 0.2);
+    border: 1px solid rgba(46, 47, 66, 0.2);
     color: rgba(46, 47, 66, 0.4);
     background-color: transparent;
     outline: transparent;
@@ -840,7 +840,7 @@ margin-bottom: 16px;
 }
 
 .modal-textarea:focus{
-border-color: var(--focus-hover);
+border-color: var(--background-btn-first);
 }
 
 .modal-check-box{
