--- a/css/styles.css
+++ b/css/styles.css
@@ -847,7 +847,17 @@ border-color: var(--background-btn-first);
     margin-bottom: 24px;
 }
 
-.modal-input-checkbox{
+.modal-check-label{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;;
+}
+
+.modal-checkbox-span {
     width: 16px;
     height: 16px;
 
@@ -861,16 +871,6 @@ border-color: var(--background-btn-first);
     fill: transparent;
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-check-label{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: #8E8F99;
 }
 
 .modal-check-link{
@@ -888,7 +888,7 @@ border-color: var(--background-btn-first);
 }
 
 
-.modal-chek:checked + .modal-check-label .modal-input-checkbox {
+.modal-chek:checked + .modal-check-label .modal-checkbox-span {
 background-color: var(--focus-hover);
 border: none;
 fill: var(--btn-first);
