--- a/css/styles.css
+++ b/css/styles.css
@@ -694,12 +694,12 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .backdrop.is-hidden{
+.backdrop.is-hidden{
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
 
-} */
+}
 
 .modal{
     position: absolute;
