--- a/css/styles.css
+++ b/css/styles.css
@@ -848,7 +848,7 @@ border-color: var(--background-btn-first);
 }
 
 .modal-check-label{
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     font-size: 12px;
