--- a/css/styles.css
+++ b/css/styles.css
@@ -805,6 +805,7 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
 .modal-input-svg{
     position: absolute;
+    fill: var(--background-color-secondary);
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
@@ -821,6 +822,7 @@ margin-bottom: 16px;
 }
 
 .modal-textarea{
+    display: block;
     width: 360px;
     height: 120px;
     font-size: 12px;
